# ItsWA

./: .flake8  .gitignore  CHANGELOG.md  README.md  autoformat.sh  configs.py  example.env  judging_results.json  main.py  pyproject.toml  test.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feature-request.yaml
.github/workflows/: autoformat.yaml  autotest.yaml  mkdocs.yaml
ccf_parser/: __init__.py  base.py  configs.py  oj.py  problems.py  results.py  status.py
docs/: .gitignore  guide.tex
docs/api/: ItsWA-api-v0.1.1.json
docs/itswa-online-docs/: mkdocs.yml
docs/itswa-online-docs/docs/: index.md
docs/itswa-online-docs/docs/develop/: rules.md
docs/itswa-online-docs/docs/how-to-use/: edit-problem.md  init-contest.md  install.md  start-judge.md
docs/itswa-online-docs/docs/intro/: about-itswa.md
docs/itswa-online-docs/docs/intro/roadmaps/: 0.0.3.md
docs/itswa-online-docs/resources/: main.html
itswa-online-docs/: mkdocs.yml
itswa-online-docs/docs/: index.md
itswa-online-docs/docs/develop/: contribution-rules.md
itswa-online-docs/docs/intro/: about-itswa.md
itswa-online-docs/resources/: main.html
judge/: __init__.py  base.py  filter.py  languages.py  player.py  report.py  runtime.py  simple_judge.py  status.py
manager/: __init__.py  base.py
manager/api/: __init__.py  base.py
manager/api/routers/: __init__.py  base.py
manager/api/routers/contest/: base.py  ccf.py  contest.py  judge.py
manager/cli/: __init__.py  base.py  contest.py  judge.py
manager/common/: __init__.py  contest.py
online_judge/: __init__.py  auth.py  base.py  contests.py
online_judge/contests/: __init__.py  base.py  judge.py  manager.py  problems.py
online_judge/oj_models/: __init__.py  contest.py  user.py
online_judge/utils/: __init__.py  database.py
online_judge/utils/dependencies/: __init__.py  base.py
telemetering/: __init__.py  base.py
temp/test_contest/: ccf.json
tests/: __init__.py  conftest.py  test_ccf_parser.py  test_cli.py  test_judge.py  test_manager.py
tests/environment/: ccf.json
tests/environment/executeables_to_test/: ac  ac.cpp  mle  mle.cpp  re  re.cpp  tle  tle.cpp  tle_cpu  tle_cpu.cpp
tests/judge/: test_judge.py  test_runtime.py
tests/test_ccf_parser/: test_ccf.py  test_comparator.py
tests/test_judge/: test_judge.py  test_language.py  test_runtime.py
tests/test_manager/: test_api.py
utils/: __init__.py  contest.py  logger.py
(+12 files in other folders)
