[tool.poetry]
name = "itswa"
version = "0.0.1"
description = "一个Linux下的竞赛代码评测系统，基于Python实现，由Lrun提供安全保证。自带一个简单的OJ供提交代码。"
authors = ["XYCode Kerman <xycode-xyc@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
rich = "^13.7.1"
pydantic = "^2.6.4"
typer = "^0.10.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
httpx = "0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
