[tool.poetry]
name = "itswa"
version = "0.0.1"
description = "一个Linux下的竞赛代码评测系统，基于Python实现，由Lrun提供安全保证。自带一个简单的OJ供提交代码。"
authors = ["XYCode Kerman <xycode-xyc@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
rich = "^13.7.1"
pydantic = "^2.6.4"
typer = "^0.10.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
aiohttp = "^3.9.3"
requests = "^2.31.0"
pytest-html = "^4.1.1"
dominate = "^2.9.1"
tinydb = "^4.8.0"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
asyncer = "^0.0.5"
psutil = "^5.9.8"
autoflake = "^2.3.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
httpx = "0.25"
pytest-xdist = "^3.5.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.17"
mypy = "^1.10.0"
types-pygments = "^2.17.0.20240310"
types-psutil = "^5.9.5.20240423"
types-requests = "^2.31.0.20240406"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
